# Game-Engine

./: CMakeLists.txt  Doxyfile  GCP_Assignment.sln  README.md  game.vcxproj  game.vcxproj.filters  myengine.vcxproj  myengine.vcxproj.filters  renderer.vcxproj  renderer.vcxproj.filters
Assets/Shaders/: cube_FragShader.txt  cube_vertShader.txt  fragShader.txt  fragShaderTest.txt  pbrFragShader.txt  pbrFragShader_CodingLabs.txt  pbrFragShader_LearnOpenGL.txt  pbrShader_LearnOpenGL.frag  pbrShader_LearnOpenGL.vert  pbrVertShader.txt  pbrVertShader_CodingLabs.txt  pbrVertShader_LearnOpenGL.txt  vertShader.txt  vertShaderTest.txt
docs/: Game Engine UML Diagram.dia  Game Engine UML Diagram.dia~  Renderer.dia  Renderer.dia~  Thumbs.db
html/: _camera_8h_source.html  _component_8h_source.html  _core_8h_source.html  _cube_8h_source.html  _enemy_8h_source.html  _entity_8h_source.html  _environment_8h_source.html  _keyboard_8h_source.html  _keys_8h_source.html  _math_8h_source.html  _mesh_renderer_8h_source.html  _model_8h_source.html  _mouse_8h_source.html  _p_b_r___model_8h_source.html  _player_8h_source.html  _resource_8h_source.html  _resources_8h_source.html  _sampler_8h_source.html  _score_8h_source.html  _screen_8h_source.html  _shader_8h_source.html  _shader_program_8h_source.html  _sound_8h_source.html  _sound_source_8h_source.html  _sphere_collider_8h_source.html  _texture_8h_source.html  _transform_8h_source.html  _triangle_renderer_8h_source.html  _trigger_8h_source.html  _vertex_array_8h_source.html  _vertex_buffer_8h_source.html  annotated.html  bugl2_8h_source.html  bugl_8h_source.html  classes.html  dir_0ddde275324c43d8035a84ca42e35f4e.html  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7bc5e25958a2fb25a8561f3aa0def6c5.html  files.html  (+103 more)
html/search/: all_1.js  all_3.js  all_6.js  all_7.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/game/: Enemy.cpp  Enemy.h  Player.cpp  Player.h  Score.cpp  Score.h  main.cpp
src/myengine/: Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Cube.cpp  Cube.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Keyboard.cpp  Keyboard.h  Keys.h  Math.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  Mouse.cpp  Mouse.h  PBR_Model.cpp  PBR_Model.h  Resource.cpp  Resource.h  Resources.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  SoundSource.cpp  SoundSource.h  SphereCollider.cpp  SphereCollider.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  (+4 more)
src/renderer/: MeshRenderer.cpp  MeshRenderer.h  Sampler.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  renderer.h
src/shaders/: vertShader.txt
